Update backend/src/test/java/com/gestionnaire_de_stage/service/StageServiceTest.java
Co-authored-by: Oussama Kably <49959935+OussaKab@users.noreply.github.com>